fixed something about environment

--- a/TwitterBot.cabal
+++ b/TwitterBot.cabal
@@ -27,6 +27,7 @@ library
                      , regex-posix
                      , containers
                      , utf8-string
+                     , text
                      , regex-posix
                      , http-conduit
                      , authenticate-oauth
